--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="index.js"></script>
     <title>Creating and Inserting DOM Elements</title>
   </head>
   <script type="application/javascript">
